--- a/app/src/main/res/layout/activity_gastos.xml
+++ b/app/src/main/res/layout/activity_gastos.xml
@@ -71,190 +71,22 @@
 
     </LinearLayout>
 
-    <!-- Primer Gasto -->
-    <LinearLayout
-        android:id="@+id/primer_gasto"
+    <ScrollView
+        android:id="@+id/transactions_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/rounded_background"
-        android:backgroundTint="@color/verde_casi_negro"
-        android:layout_below="@+id/balance_section">
+        android:layout_below="@id/balance_section"
+        android:layout_above="@id/footer_menu"
+        android:layout_marginTop="16dp">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
+            android:id="@+id/transactions_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@android:color/black">
-
-            <!-- Fecha -->
-            <TextView
-                android:id="@+id/transaction_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="20 de marzo"
-                android:textColor="@color/blanco"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"/>
-
-            <!-- Contenedor principal -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:orientation="horizontal"
-                android:background="@color/gris_auxiliar"
-                android:padding="8dp"
-                android:elevation="4dp"
-                android:clipToPadding="false">
-
-                <!-- Ícono -->
-                <ImageView
-                    android:id="@+id/transaction_icon"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_bulb"
-                    android:layout_marginEnd="8dp"
-                    app:tint="#FFFFFF" />
-
-                <!-- Información -->
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/transaction_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Mercadona Avda de la Paz"
-                        android:textColor="@color/blanco"
-                        android:textSize="18sp"
-                        android:gravity="center_vertical"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="end"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/transaction_amount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="-4,71 €"
-                        android:textColor="@android:color/white"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/transaction_amount2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="59,92 €"
-                        android:textColor="@android:color/white"
-                        android:textSize="13sp"/>
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-    <!-- Segundo Gasto -->
-    <LinearLayout
-        android:id="@+id/segundo_gasto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/rounded_background"
-        android:backgroundTint="@color/verde_casi_negro"
-        android:layout_below="@+id/primer_gasto">
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@android:color/black">
-
-            <!-- Fecha -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="19 de marzo"
-                android:textColor="@color/blanco"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"/>
-
-            <!-- Contenedor principal -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:orientation="horizontal"
-                android:background="@color/gris_auxiliar"
-                android:padding="8dp"
-                android:elevation="4dp"
-                android:clipToPadding="false">
-
-                <!-- Ícono -->
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_bulb"
-                    app:tint="#FFFFFF"
-                    android:layout_marginEnd="8dp" />
-
-                <!-- Información -->
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Ingreso Cajero San Millán"
-                        android:textColor="@color/blanco"
-                        android:textSize="18sp"
-                        android:gravity="center_vertical"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="end"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="+20.00 €"
-                        android:textColor="@color/verde_llamativo"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="34,92 €"
-                        android:textColor="@android:color/white"
-                        android:textSize="13sp"/>
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
+            android:orientation="vertical" />
+    </ScrollView>
 
     <!-- Footer Menu -->
     <LinearLayout
