--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,10 @@
     <ScrollView
         android:id="@+id/cuentas_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="20dp">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="16dp">
 
         <LinearLayout
             android:id="@+id/linear_layout_container"
