--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -71,6 +71,12 @@
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF" />
 
+        <!-- Este VIEW lo he metido para empujar lso botones hasta abajo -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
         <!-- Botones -->
         <LinearLayout
             android:layout_width="match_parent"
