Circulos de progreso Modificados.

--- a/app/src/main/res/layout/activity_estadisticas.xml
+++ b/app/src/main/res/layout/activity_estadisticas.xml
@@ -64,12 +64,13 @@
                     style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                     android:layout_width="103dp"
                     android:layout_height="96dp"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_gravity="center"
                     android:max="100"
                     android:progress="80"
                     app:indicatorColor="@color/verde_llamativo"
                     app:indicatorDirectionCircular="clockwise"
                     app:indicatorInset="8dp"
+                    app:indicatorSize="100dp"
                     app:trackColor="@color/rojo_gasto"
                     app:trackThickness="3dp" />
 
@@ -113,12 +114,13 @@
                     style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_gravity="center"
                     android:max="100"
                     android:progress="80"
                     app:indicatorColor="@color/verde_llamativo"
                     app:indicatorDirectionCircular="clockwise"
                     app:indicatorInset="8dp"
+                    app:indicatorSize="100dp"
                     app:trackColor="@color/rojo_gasto"
                     app:trackThickness="3dp" />
 
