--- a/app/src/main/res/layout/activity_ajustes.xml
+++ b/app/src/main/res/layout/activity_ajustes.xml
@@ -171,11 +171,78 @@
         </LinearLayout>
 
 
+        <!-- NUEVO OBJETIVO MENSUAL -->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Establecer objetivo ingresos mensuales"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:layout_marginTop="14dp"/>
+
+        <TextView
+            android:id="@+id/objactual_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Objetivo actual: 0€"
+            android:textColor="#808080"
+            android:textSize="10sp"
+            android:layout_marginVertical="2dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingVertical="8dp">
+
+            <EditText
+                android:id="@+id/obj_mensual"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="6dp"
+                android:layout_weight="1"
+                android:background="@drawable/colored_rounded_background"
+                android:backgroundTint="@color/verde_background_general"
+                android:hint="Objetivo ingresos mensual (€)"
+                android:inputType="numberDecimal"
+                android:padding="14dp"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/set_objetivo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Establecer"
+                android:textColor="@color/verde_casi_negro"
+                android:textSize="14sp"
+                android:gravity="center"
+                android:background="@drawable/colored_rounded_background"
+                android:backgroundTint="@color/verde_background_general"
+                android:paddingHorizontal="6dp"/>
+        </LinearLayout>
+
         <!-- Este VIEW lo he metido para empujar lso botones hasta abajo -->
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/cerrarsesion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cambiar de cuenta"
+            android:textColor="@color/verde_casi_negro"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/colored_rounded_background"
+            android:backgroundTint="@color/verde_background_general"
+            android:paddingHorizontal="20dp"/>
 
         <Button
             android:id="@+id/delete_account"
