--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,9 +35,10 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:contentDescription="Scroll View With Users">
 
-        <LinearLayout
+    <LinearLayout
             android:id="@+id/linear_layout_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
